# planar-nexus

./: .agent-task-763.md  .agent-task.md  .ci-trigger  .commit-msg  .env.example  .gitignore  .openhandsignore  .output.txt  .shellcheckrc  AGENTS.md  AI_DIFFICULTY_CONFIG.md  AI_PROXY_IMPLEMENTATION.md  AI_PROXY_QUICK_REFERENCE.md  ARTWORK_GENERATION_README.md  BUILD_INSTRUCTIONS.md  CARD_DATABASE_IMPORT.md  CARD_DATABASE_README.md  CLAUDE.md  CLIENT_SIDE_MULTIPLAYER.md  CLIENT_SIDE_TRANSFORMATION.md  CODE_OF_CONDUCT.md  COMBAT_AI.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEEP_CODE_REVIEW_REPORT.md  DEMO_OPPONENT_GENERATOR.ts  Dockerfile  EPIC_ANALYSIS_AND_PLAN.md  EPIC_IMPLEMENTATION_SUMMARY.md  FINAL_VERIFICATION_SUMMARY.md  GAP_ANALYSIS_ISSUES.md  GAP_ANALYSIS_REPORT.md  GITHUB_ISSUES_CREATED.md  GITHUB_ISSUES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  IMPLEMENTED_ISSUES_CLOSURE.md  INVESTIGATION_PLAN.md  ISSUES-card-implementation.md  (+68 more)
.claude/: settings.json
.code-graph/: graph.db-shm  graph.db-wal
.eforge/: monitor.db-shm  monitor.db-wal
.github/: README.md  RELEASE_AUTOMATION.md  TESTING_WORKFLOW.md  WORKFLOW_FIXES.md  dependabot.yml
.memory/: memory.db-shm  memory.db-wal
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  next-wave-issues-plan.md  standard-modal-cards-plan.md
src-tauri/: Cargo.toml  LINUX_README.md  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/tests/: single-instance-smoke.sh
(+1647 files in other folders)
