[package]
name = "planar-nexus-desktop"
version = "1.0.0"
description = "Planar Nexus desktop client — open-source Magic: The Gathering deck builder, AI coach, and P2P play"
authors = ["Planar Nexus Contributors"]
license = "MIT"
repository = "https://github.com/anchapin/planar-nexus"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"

# Shrinks release binaries shipped via the Tauri installer (NSIS / DMG / AppImage).
# See issue #1442. `lto` may be downgraded to "thin" if CI link time becomes prohibitive.
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
opt-level = "s"
